# my_django_project

./: project.db  pyproject.toml
.confidential/: default.json
.github/workflows/: ci.yml
project/: settings.py
