[tool.poetry]
name = "my_django_project"
version = "0.1.0"
description = ""
authors = ["Sambo Chhay <chhaysambo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"
confidential = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
pytest-django = "^3.9.0"
pytest-xdist = "^1.34.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
